--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img src="./image/cat.jpg" width="200" alt="Здесь картинка Баксика">
+  <img src="./cat.jpg" width="200" alt="Здесь картинка Баксика">
   <h1>Кот Баксик</h1>
   <p>Как и у большинства семей, у нас есть домашний питомец. Это кот <strong>Баксик.</strong> Он
     <strong>сфинкс.</strong> У него весьма необычный внешний вид, некоторый даже при первой встрече немного его
